Fixed image alignment in viewing mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,18 +140,27 @@ body {
 /* Modal Styles */
 .modal {
     display: none;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    overflow: auto;
+    overflow: hidden;
 }
 
 .modal-content {
-    margin: auto;
-    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.modal-content img {
     max-width: 100%;
     max-height: 100%;
 }
